mysqld-exporter-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqld-exporter
  namespace: monitoring
  labels:
    app: mysqld-exporter
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqld-exporter
  template:
    metadata:
      name: mysqld-exporter
      labels:
        app: mysqld-exporter
    spec:
      serviceAccountName: mysqld-exporter
      containers:
      - name: mysqld-exporter-1
        image: bitnami/mysqld-exporter
        imagePullPolicy: Never
        args:
        - '--web.listen-address=:9104'
        ports:
          - name: http
            containerPort: 9104
      - name: mysqld-exporter-2
        image: bitnami/mysqld-exporter
        imagePullPolicy: Never
        args:
        - '--web.listen-address=:9105'
        ports:
          - name: http
            containerPort: 9105
      - name: mysqld-exporter-3
        image: bitnami/mysqld-exporter
        imagePullPolicy: Never
        args:
        - '--web.listen-address=:9106'
        ports:
          - name: http
            containerPort: 9106
