prometheus-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-core
  namespace: monitoring
  labels:
    app: prometheus
    component: core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      name: prometheus-main
      labels:
        app: prometheus
        component: core
    spec:
      serviceAccountName: prometheus-k8s
      nodeSelector:
        kubernetes.io/hostname: wxq-pc
      volumes:
      - name: data
        hostPath:
          path: /data/prometheus_data 
      - name: config-volume
        configMap:
          name: prometheus-core
          defaultMode: 420
          items:
            - key: prometheus.yaml
              path: prometheus.yaml
            - key: web-config.yaml
              path: web-config.yaml
      - name: rules-volume
        configMap:
          name: prometheus-rules
      - name: time
        hostPath:
          path: /etc/localtime
      containers:
      - name: prometheus
        image: bitnami/prometheus:2
        args:
          - '--storage.tsdb.retention=15d'
          - '--config.file=/etc/prometheus/prometheus.yaml'
          - '--storage.tsdb.path=/home/prometheus_data'
          - '--web.config.file=/etc/prometheus/web-config.yaml'
          - '--web.enable-lifecycle' 
        ports:
          - name: webui
            containerPort: 9090
        securityContext:
          privileged: true
        volumeMounts:
        - name: data
          mountPath: /home/prometheus_data
        - name: config-volume
          mountPath: /etc/prometheus
        - name: rules-volume
          mountPath: /etc/prometheus-rules
        - name: time
          mountPath: /etc/localtime
