clickhouse-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  name: clickhouse-exporter
  namespace: monitoring
  labels:
    app: clickhouse-exporter
spec:
  ports:
  - name: clickhouse-exporter
    port: 9116
    protocol: TCP
  selector:
    app: clickhouse-exporter
