prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-prometheus
  namespace: monitoring
spec:
  rules:
  - host: www.test.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: prometheus
            port: 
              number: 9090
